<resources>
    <string name="app_name">Veni por el y es tuyo!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="makeProduct">Realizar Publicación</string>
    <string name="productName">Nombre del Producto</string>
    <string name="category">Categoría</string>
    <string name="state">Estado</string>
    <string name="continueText">Continuar</string>
    <string name="products">Productos</string>
    <string name="profile">Perfil</string>
    <string name="map">Mapa</string>
    <string name="name">Nombre</string>
    <string name="moderateProductsTitle">Moderar Productos</string>
    <string name="takePhoto1Text">Tomar foto 1</string>
    <string name="takePhoto2Text">Tomar foto 2</string>
    <string name="takePhoto3Text">Tomar foto 3</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="register">Registrate</string>
    <string name="username">Nombre de usuario</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>

    <string-array name="categories_array">
        <item>Juguetes</item>
        <item>Informatica</item>
        <item>Salud</item>
        <item>Deporte</item>
    </string-array>

    <string-array name="states_array">
        <item>Excelente</item>
        <item>Bien</item>
        <item>Regular</item>
        <item>Malo</item>
    </string-array>

    <string-array name="country_array">
        <item>Uruguay</item>
        <item>Argentina</item>
        <item>Brasil</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_user_menu">MainUserMenuActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_products_maps">Map</string>
    <string name="title_activity_products_map">Map</string>
    <string name="adminMenuTitle">Menu Administrador</string>
    <string name="adminUsers">Administrar Usuarios</string>
    <string name="adminPosts">Administrar publicaciones</string>
    <string name="continueApp">Continuar con la app</string>
    <string name="description">Descripcion</string>
    <string name="userEmail">Email</string>
    <string name="countryTitle">Seleccione el pais</string>
</resources>
