<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.product.whitewalkers.veniporelyestuyo.RegisterActivity"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="392dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="@dimen/activity_title_text_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            app:layout_constraintRight_toLeftOf="@+id/loadingPanel"
            app:layout_constraintTop_toTopOf="@+id/loadingPanel"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/username" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userEmail"
            app:layout_constraintRight_toLeftOf="@+id/loadingPanel"
            app:layout_constraintTop_toTopOf="@+id/loadingPanel"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/email" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintRight_toLeftOf="@+id/loadingPanel"
            app:layout_constraintTop_toTopOf="@+id/loadingPanel"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/password" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/countryTitle"
            app:layout_constraintRight_toLeftOf="@+id/loadingPanel"
            app:layout_constraintTop_toTopOf="@+id/loadingPanel"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Spinner
            android:id="@+id/countrySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/country_array" />

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:onClick="registerClick"
            android:text="@string/continueText"
            tools:text="@string/continueText" />

    </LinearLayout>

</LinearLayout>
