<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.product.whitewalkers.veniporelyestuyo.LoginActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="181dp"
        android:layout_height="53dp"
        android:width="200dp"
        android:height="@dimen/activity_title_text_size"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/bienvenido"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="30sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtViewUserName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:layout_marginTop="95dp"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/txtViewContraseña"
        app:layout_constraintLeft_toLeftOf="@+id/txtEditUsername"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/txtViewContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/txtEditContraseña"
        app:layout_constraintLeft_toLeftOf="@+id/txtEditContraseña"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/txtEditUsername"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="55dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/txtEditContraseña"
        android:layout_marginEnd="55dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="105dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="105dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtViewTitle" />

    <EditText
        android:id="@+id/txtEditContraseña"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="54dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="13dp"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrer"
        app:layout_constraintLeft_toLeftOf="@+id/btnRegistrer"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/btnRegistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:layout_marginTop="96dp"
        android:onClick="register"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditContraseña"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


</android.support.constraint.ConstraintLayout>
